[package]
name = "rfanotify"
version = "0.1.0"
authors = ["Daniel <daniel@binaryparadox.net"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.17.0"
semver-parser = "0.9.0"

[patch.crates-io]
# Use forked versions of the nix and libc crates.
# This is required to have access to the `fanotify` bindings that aren't
# upstreamed yet.
#
# TODO(@cpu): Delete this once nix and libc changes are both upstreamed.
nix = { git = 'https://github.com/cpu/nix', branch = 'cpu-fanotify-wip' }
libc = { git = 'https://github.com/cpu/libc', branch = 'cpu-fanotify-wip' }
