[package]
name = "rfanotify"
version = "0.1.0"
authors = ["Daniel <daniel@binaryparadox.net"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.17.0"
semver-parser = "0.9.0"

[patch.crates-io]
# Use forked versions of the nix crates, and the master branch of the libc
# crate. The nix crate wrappers are a WIP and not upstreamed. The libc FFI
# definitions are upstreamed but not yet in a released version.
#
# TODO(@cpu): Delete these once nix and libc changes are both upstreamed and
# released.
nix = { git = 'https://github.com/cpu/nix', branch = 'cpu-fanotify-wip' }
libc = { git = 'https://github.com/rust-lang/libc' }
