[package]
name = "rfanotify"
version = "0.1.0"
authors = ["Daniel <daniel@binaryparadox.net"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.17.0"
semver-parser = "0.9.0"

[patch.crates-io]
# Use forked version of the nix crates. The nix crate wrappers are a WIP and not
# upstreamed.
#
# TODO(@cpu): Delete this patch once nix changes are upstreamed and
# released.
nix = { git = 'https://github.com/cpu/nix', branch = 'cpu-fanotify-wip' }
